plugins {
    id 'java'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
}

version = "${mod_version}-${minecraft_version}"
group = mod_group_id

base {
    archivesName = 'worldbridge-api'
}

// Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    // API 需要 MC 类做编译期 classpath（仅编译，不产 mod）
    mappings channel: mapping_channel, version: mapping_version
}

repositories {
    maven { url = "https://maven.aliyun.com/repository/public" }
    maven { url = "https://mirrors.cloud.tencent.com/nexus/repository/maven-public/" }
    mavenCentral()
    maven { url = "https://maven.minecraftforge.net/" }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
}

java {
    withSourcesJar()
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs << "--add-exports" << "java.base/java.lang=ALL-UNNAMED" << "--add-exports" << "java.base/java.util=ALL-UNNAMED" << "--add-exports" << "java.base/java.lang.invoke=ALL-UNNAMED" << "--add-exports" << "java.base/java.nio.charset=ALL-UNNAMED" << "--add-exports" << "java.base/java.net=ALL-UNNAMED" << "--add-exports" << "java.base/java.util.concurrent.atomic=ALL-UNNAMED" << "--add-exports" << "java.base/java.lang.reflect=ALL-UNNAMED" << "--add-exports" << "java.base/java.io=ALL-UNNAMED" << "--add-exports" << "java.base/java.nio=ALL-UNNAMED" << "--add-exports" << "java.base/java.util.concurrent=ALL-UNNAMED" << "--add-opens" << "java.base/java.lang=ALL-UNNAMED" << "--add-opens" << "java.base/java.util=ALL-UNNAMED" << "--add-opens" << "java.base/java.lang.reflect=ALL-UNNAMED" << "--add-opens" << "java.base/java.io=ALL-UNNAMED" << "--add-opens" << "java.base/java.nio=ALL-UNNAMED" << "--add-opens" << "java.base/java.util.concurrent=ALL-UNNAMED"
}
